# cstr-enum

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
cstr-enum-derive/: Cargo.toml
cstr-enum-derive/src/: lib.rs
src/: lib.rs
tests/: derive_macro.rs
tests/compilation/: duplicate_arg.rs  duplicate_arg.stderr  name_nul_bytes.rs  name_nul_bytes.stderr  name_on_enum.rs  name_on_enum.stderr  non_enum.rs  non_enum.stderr  non_unit_variant_fail.rs  non_unit_variant_fail.stderr  non_unit_variant_pass.rs  pass.rs  wrong_arg.rs  wrong_arg.stderr
