[package]
name = "cstr-enum"
version = "1.0.0"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
edition = "2018"
homepage = "https://github.com/ykrist/cstr-enum"
repository = "https://github.com/ykrist/cstr-enum"
description = "A crate for defining C-style string enums."
license = "MIT"
keywords = ["ffi", "derive", "conversion", "string", "enum"]
categories = ["development-tools::ffi"]

[dependencies]
cstr-enum-derive = "0.1.0"

[dev-dependencies]
trybuild = "^1.0"
