[package]
name = "cstr-enum-derive"
version = "0.1.0"
authors = ["Yannik Rist"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits", "printing", "parsing", "derive"] }
quote = "^1.0"
proc-macro2 = "*"
