[package]
name = "cstr-enum-derive"
version = "0.1.0"
authors = ["Yannik Rist <yannik.rist@uqconnect.edu.au>"]
edition = "2018"
license = "MIT"
description = "Derive macros for the cstr-enum crate"
homepage = "https://github.com/ykrist/cstr-enum"
repository = "https://github.com/ykrist/cstr-enum"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits", "printing", "parsing", "derive"] }
quote = "^1.0"
proc-macro2 = "^1.0"
